--- a/publish/Certificate.html
+++ b/publish/Certificate.html
@@ -16,8 +16,8 @@
         <h2>Your Certificates</h2>
         <div id="certificate-list">
             <div class="certificate-item">
-                <strong>Certificate 1</strong>
-                <iframe src="" width="600" height="400" frameborder="0"></iframe>
+                <strong>AI for School Level 1 (2023)</strong>
+                <img src="/src/Certificate(Pic)/Certificate AI for school Level 1 (2023)/Certificate AI for school Level 1 (2023)-1.png" width="600" height="400" frameborder="0">
             </div>
             <div class="certificate-item">
                 <strong>Certificate 2</strong>
