--- a/publish/Certificate.html
+++ b/publish/Certificate.html
@@ -9,23 +9,78 @@
 <body>
     <header>
         <h1>Certificate Storage</h1>
-        <p>View your certificates easily!</p>
+        <p>These are the certificate that prove my skills and my Experiences</p>
     </header>
 
     <section id="certificates">
-        <h2>Your Certificates</h2>
+        <h2>My Certificates</h2>
         <div id="certificate-list">
+            <h3>RAC Traning 2023</h3>
             <div class="certificate-item">
-                <strong>AI for School Level 1 (2023)</strong>
-                <img src="/src/Certificate(Pic)/Certificate AI for school Level 1 (2023)/Certificate AI for school Level 1 (2023)-1.png" width="600" height="400" frameborder="0">
+                <img src="/src/Certificate(Pic)/Certificate AI for school Level 1 (2023)/Certificate AI for school Level 1 (2023)-1.png">
+                <p>AI for School Level 1 (2023)</p>
+                <p>from RAC Traning 2023</p>
             </div>
             <div class="certificate-item">
-                <strong>Certificate 2</strong>
-                <iframe src="path/to/certificate2.pdf" width="600" height="400" frameborder="0"></iframe>
+                <img src="/src/Certificate(Pic)/Certificate AI for school Level 2 (2023)/Certificate AI for school Level 2 (2023)-1.png">
+                <p>AI for School Level 2 (2023)</p>
+                <p>from RAC Training 2023</p>
             </div>
             <div class="certificate-item">
-                <strong>Certificate 3</strong>
-                <iframe src="path/to/certificate3.pdf" width="600" height="400" frameborder="0"></iframe>
+                <img src="/src/Certificate(Pic)/Certificate DataSci (2023)/Certificate DataSci (2023)-1.png">
+                <p>Data Science (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate IoT Application (2023)/Certificate IoT Application (2023)-1.png">
+                <p>Internet of Things Application (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate MQTT Protocol/Certificate MQTT Protocol-1.png">
+                <p>MQTT Protocol (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Introduction to Robotics (2023)/Certificate Introduction to Robotics (2023)-1.png">
+                <p>Introduction to Robotics (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Tele 3D Printing (2023)/Certificate Tele 3D Printing (2023)-1.png">
+                <p>Tele 3D Printing (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Python (2023)/Certificate Python (2023)-1.png">
+                <p>Python Programming (2023)</p>
+                <p>from RAC Training 2023</p>
+            </div>
+           <h3>RAC Training 2024</h3>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate AI for School level 1 (2024)/Certificate AI for School level 1 (2024)-1.png" >
+                <p>AI for School Level 1 (2024)</p>
+                <p>from RAC Training 2024</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate AI for School level 2 (2024)/Certificate AI for School level 2 (2024)-1.png" >
+                <p>AI for School Level 2 (2024)</p>
+                <p>from RAC Training 2024</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate AI for School level 3 (2024)/Certificate AI for School level 3 (2024)-1.png" >
+                <p>AI for School Level 3 (2024)</p>
+                <p>from RAC Training 2024</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Data-Sci (2024)/Certificate Data-Sci (2024)-1.png" >
+                <p>Data Science (2024)</p>
+                <p>from RAC Training 2024</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Python (2024)/Certificate Python (2024)-1.png" >
+                <p>Python Programming (2024)</p>
+                <p>from RAC Training 2024</p>
             </div>
             <!-- Add more certificates as needed -->
         </div>
