add all Certificate

--- a/publish/Certificate.html
+++ b/publish/Certificate.html
@@ -15,7 +15,7 @@
     <section id="certificates">
         <h2>My Certificates</h2>
         <div id="certificate-list">
-            <h3>RAC Traning 2023</h3>
+            <h3>Robot, AI and Coding Traning 2023</h3>
             <div class="certificate-item">
                 <img src="/src/Certificate(Pic)/Certificate AI for school Level 1 (2023)/Certificate AI for school Level 1 (2023)-1.png">
                 <p>AI for School Level 1 (2023)</p>
@@ -56,7 +56,7 @@
                 <p>Python Programming (2023)</p>
                 <p>from RAC Training 2023</p>
             </div>
-           <h3>RAC Training 2024</h3>
+           <h3>Robot, AI and Coding Training 2024</h3>
             <div class="certificate-item">
                 <img src="/src/Certificate(Pic)/Certificate AI for School level 1 (2024)/Certificate AI for School level 1 (2024)-1.png" >
                 <p>AI for School Level 1 (2024)</p>
@@ -81,6 +81,33 @@
                 <img src="/src/Certificate(Pic)/Certificate Python (2024)/Certificate Python (2024)-1.png" >
                 <p>Python Programming (2024)</p>
                 <p>from RAC Training 2024</p>
+            </div>
+            <h3>RAI Venture Traning 2024</h3>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate RAI (Online)/Certificate RAI (Online)-1.png" >
+                <p>RAI Venture Training Online</p>
+                <p>from RAI Venture 2024</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate KMUTL RAI Venture 2024 camp/Certificate KMUTL RAI Venture 2024 camp-1.png" >
+                <p>RAI Venture Training Onsite</p>
+                <p>from RAI Venture 2024</p>
+            </div>
+            <h3>Robotics Competition</h3>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate Arduino Uno R4 wifi/Certificate Arduino Uno R4 wifi-1.png" >
+                <p>Arduino R4 Wifi logistics Competition</p>
+                <p>Arduino Day 2023</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate KTIS Manual Gatering robot/Certificate KTIS Manual Gatering robot-1.png" >
+                <p>KTIS Gatering robot Competition</p>
+                <p>CPU ASEAN Youth Robotics 2th</p>
+            </div>
+            <div class="certificate-item">
+                <img src="/src/Certificate(Pic)/Certificate ACT MakeX robotics competition (Warm-Up)/Certificate ACT MakeX robotics competition (Warm-Up)-1.png" >
+                <p>MakeX Challenge Competition (Warm-Up)</p>
+                <p>ACT MakeX robotics competition</p>
             </div>
             <!-- Add more certificates as needed -->
         </div>
