--- a/publish/index.html
+++ b/publish/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Thanadech_pofolio</title>
     <link rel="stylesheet" href="/src/styles.css">
+    <script src="/src/script.js"></script> 
 </head>
 <body>
     <header>
